cmake_minimum_required( VERSION 3.21 )
project( C++ VERSION 1.0 )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED True )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )

add_subdirectory( src/containers ${CMAKE_BINARY_DIR}/object/containers )
add_subdirectory( src/control-flow ${CMAKE_BINARY_DIR}/object/control-flow )
add_subdirectory( src/exceptions ${CMAKE_BINARY_DIR}/object/exceptions )
add_subdirectory( src/functions ${CMAKE_BINARY_DIR}/object/functions )
add_subdirectory( src/fundamental-types ${CMAKE_BINARY_DIR}/object/fundamental-types )
add_subdirectory( src/headers ${CMAKE_BINARY_DIR}/object/headers )
add_subdirectory( src/hello-operators ${CMAKE_BINARY_DIR}/object/hello-operators )
add_subdirectory( src/inheritance ${CMAKE_BINARY_DIR}/object/inheritance )
add_subdirectory( src/io-stream ${CMAKE_BINARY_DIR}/object/io-stream )
add_subdirectory( src/move-semantics ${CMAKE_BINARY_DIR}/object/move-semantics )
add_subdirectory( src/objects ${CMAKE_BINARY_DIR}/object/objects )
add_subdirectory( src/overloading ${CMAKE_BINARY_DIR}/object/overloading )
add_subdirectory( src/variables ${CMAKE_BINARY_DIR}/object/templates )
add_subdirectory( src/version ${CMAKE_BINARY_DIR}/object/version )