cmake_minimum_required( VERSION 3.21 )
project( C++ VERSION 1.0 )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED True )
set( CMAKE_SOURCE_ROOT_DIR src/main/c++ )

function( configure_build_dirs base_dir )
    if( ${CMAKE_BUILD_TYPE} MATCHES Release )
        set( CMAKE_MODULE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${base_dir}/build/prd )
    else()
        set( CMAKE_MODULE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${base_dir}/build/dev )
    endif()
    
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_MODULE_BINARY_DIR}/lib PARENT_SCOPE )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_MODULE_BINARY_DIR}/lib PARENT_SCOPE )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_MODULE_BINARY_DIR}/bin PARENT_SCOPE )
endfunction()

function( add_module module_name module_directory )
    if( ${CMAKE_BUILD_TYPE} MATCHES Release )
        set( CMAKE_MODULE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${module_directory}/build/prd )
    else()
        set( CMAKE_MODULE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${module_directory}/build/dev )
    endif()

    add_subdirectory( ${module_name} ${CMAKE_MODULE_BINARY_DIR} )
endfunction()

add_module( containers containers )
add_module( control-flow control-flow )
add_module( exceptions exceptions )
add_module( functions functions )
add_module( fundamental-types fundamental-types )
add_module( headers headers )
add_module( hello-operators hello-operators )
add_module( inheritance inheritance )
add_module( io-stream io-stream )
add_module( move-semantics move-semantics )
add_module( objects objects )
add_module( overloading overloading )
add_module( templates templates )
add_module( variables variables )
add_module( version version )