cmake_minimum_required( VERSION 3.30.0 )
project( c++ VERSION 1.0 )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_CXX_EXTENSIONS OFF )
set( PROJECT_SOURCE_ROOT_DIR src/main/c++ )

function( add_module source_dir binary_dir )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin )
    add_subdirectory( ${source_dir} ${binary_dir} )
endfunction()

find_package( Poco REQUIRED Foundation )

add_module( containers containers )
add_module( control-flow control-flow )
add_module( exceptions exceptions )
add_module( functions functions )
add_module( fundamental-types fundamental-types )
add_module( headers headers )
add_module( hello-operators hello-operators )
add_module( inheritance inheritance )
add_module( io-stream io-stream )
add_module( md5 md5 )
add_module( move-semantics move-semantics )
add_module( objects objects )
add_module( overloading overloading )
add_module( templates templates )
add_module( variables variables )
add_module( version version )